Fix resume in dark mode

--- a/src/components/blog/post.css
+++ b/src/components/blog/post.css
@@ -14,6 +14,10 @@
     border-radius: 5px;
 }
 
+.dark-theme .blog-post:hover{
+    box-shadow: 0 0 0.25vh 0.25vw grey;
+}
+
 .post_title {
     position: absolute;
     top: 50%;
@@ -41,6 +45,10 @@
 }
 
 .blog-post:hover .next {
-
     opacity: 1;
+}
+
+.dark-theme .blog-post:hover .next {
+    opacity: 1;
+    color: white;
 }
