--- a/src/components/resume/resume.css
+++ b/src/components/resume/resume.css
@@ -10,8 +10,8 @@
     border-radius: 5px;
 }
 
-.dark-theme resume-card__body:hover {
-    box-shadow: 0 0 0.25vh 0.25vw rgb(46, 46, 46);
+.dark-theme .resume-card__body:hover {
+    box-shadow: 0 0 0.25vh 0.25vw grey;
 }
 
 .resume-title {
